"Added profile picture in contact section. Corrected spacing in project description."

--- a/personal-portfolio/src/styles/components/Contact.scss
+++ b/personal-portfolio/src/styles/components/Contact.scss
@@ -2,6 +2,12 @@
   margin-top: 5rem;
   text-align: center;
 
+  img {
+    width: 7rem;
+    border-radius: 5px;
+    margin-top: 1rem;
+  }
+
   .contact-div {
     margin: 3rem;
 
